--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         #game {
             width: 800px;
             height: 600px;
-            background: url('./sky.png');
+            background: url('image/sky.png');
             position: relative;
             overflow: hidden;
         }
